# todo

client/: .gitignore  CMakeLists.txt  README.md  greeter_server.cc  greeterclient.cpp  greeterclient.hpp  grpcworld.cpp  hierarchy.lua  luaconsole.cpp  main.cpp  main_imgui_test.cpp  mood.lua  todolistclient.cpp  todolistclient.hpp
client/SDL2/src/stdlib/: SDL_string.c
client/glad/: CMakeLists.txt
client/glad/include/glad/: glad.h
client/glad/src/: glad.c
client/lua/: CMakeLists.txt
client/protos/: helloworld.proto
protobuf/: todolist.pb.go  todolist.proto
protos/: helloworld.proto
server/: go.mod  go.sum
server/cmd/: main.go
